# anycache

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
anycache/: __init__.py  main.py  serializers.py
tests/: test_cache.py
